src/other/mico-2.3.12/test/idl/error/expected-stderr-case18.idl
case18.idl:10: no value for default case from discriminator type available
